# OpenAL-library

./: .gitignore  CMakeLists.txt
lib/: glad.c  glad.h
src/: camera.hpp  main.cpp  renderer.hpp
src/sound/: soundLoader.cpp  soundLoader.h  soundObject.cpp  soundObject.h
